Update orspy documentation.
TODO Maybe extract the python documentation.

--- a/share/src/Ors/ors.dox
+++ b/share/src/Ors/ors.dox
@@ -294,9 +294,6 @@ change the ors data structures and display them easily.
 
 Try the following to get the inline documentation from within a python shell:
 \verbatim
-import sys
-sys.path.append("path/to/lib/")
-
 import orspy
 help(orspy)
 \endverbatim
@@ -305,15 +302,15 @@ help(orspy)
 - make sure you have all dependencies installed (especially SWIG). See \a install/INSTALL_DEPENDENCIES.sh.
 - create the python interface (and *.so files) with the makefile src/MT/Makefile_ors_for_python
   \verbatim
-cd share/src/MT
-make -f Makefile_ors_for_swig
+cd share/src/Ors
+make -f Makefile_orspy
   \endverbatim
   It moves the created files to share/lib/.
-- you should be able to run \a orspy. Go to share/test/orspy/ and run
+- you should be able to run \a orspy. Go to share/unittest/Ors/ and run
   \verbatim
-  python ors_test.py
+py.test
   \endverbatim
-  The little test should also give you a good idea of how to use \a orspy interactively in the python shell.
+  The unittests should also give you a good idea of how to use \a orspy interactively in the python shell.
 
 
 \subsection ors_swig_getting_started Getting Started with orspy
@@ -321,12 +318,8 @@ In general the interface is pretty similar to the pure c++ implementation.
 However, \a orspy offers some additional python features.  There are several ways
 to get familiar with \a orspy:
 
-- run the test under share/test/orspy/
-  \verbatim
-  python ors_test.py
-  \endverbatim
-  and take a look at the code.
-- the unittests under share/unittests/orspy/ document kinda document the API.
+- there are a few examples
+- the unittests under share/unittests/Ors/ kinda document the API.
   At least they make it clear how to use certain basic features of \a orspy.
 - use an interactive python shell (ipython or bpython or ...) to explore \a orspy
   \verbatim
