--- a/share/projects/exploration_comparison/dirichlet_distribution.ipynb
+++ b/share/projects/exploration_comparison/dirichlet_distribution.ipynb
@@ -33,6 +33,15 @@
      "outputs": []
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "# Dirichlet Distribution Implementation\n",
+      "\n",
+      "I extracted this into a propper module. I should add this to scipy."
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
