--- a/share/projects/exploration_comparison/belief_experiments.ipynb
+++ b/share/projects/exploration_comparison/belief_experiments.ipynb
@@ -22,7 +22,7 @@
       "\n",
       "import matplotlib.pyplot as plt\n",
       "from mpl_toolkits.mplot3d import Axes3D\n",
-      "#import seaborn as sns\n",
+      "import seaborn as sns\n",
       "\n",
       "%matplotlib inline\n",
       "# automatically reload modules on change\n",
@@ -31,7 +31,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": null
     },
     {
      "cell_type": "markdown",
@@ -49,7 +50,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": null
     },
     {
      "cell_type": "code",
