Test the new structure.

--- a/share/projects/exploration_comparison/belief_experiments.ipynb
+++ b/share/projects/exploration_comparison/belief_experiments.ipynb
@@ -58,22 +58,12 @@
      "collapsed": false,
      "input": [
       "b = belief.ObjectBel(\"ob1\")\n",
-      "print(b.H())\n",
-      "for i in range(10):\n",
-      "    b.observe(\"static\")\n",
-      "    print(b.probs())\n",
-      "    print(b.H())\n",
-      "    print (\"=\" * 30)\n",
-      "    \n",
-      "for i in range(10):\n",
-      "    b.observe(\"movable\")\n",
-      "    print(b.probs())\n",
-      "    print(b.H())\n",
-      "    print (\"=\" * 30)"
+      "print(b.entropy())"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": null
     },
     {
      "cell_type": "code",
@@ -83,16 +73,17 @@
       "\n",
       "entropy = np.ndarray((10, 10))\n",
       "#print(entropy)\n",
-      "for i in range(1, 10):\n",
+      "for i in range(10):\n",
       "    b = belief.ObjectBel(\"ob1\")\n",
       "    b[\"movable\"] = i\n",
       "    for j in range(1, 10):\n",
       "        b.observe(\"static\")\n",
-      "        entropy[i, j] = b.H_diff()"
+      "        entropy[i, j] = b.entropy_diff()"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": null
     },
     {
      "cell_type": "code",
@@ -102,11 +93,12 @@
       "X, Y = np.meshgrid(x, x)\n",
       "fig = plt.figure(figsize=(12, 9))\n",
       "ax = fig.add_subplot(111, projection='3d')\n",
-      "ax.plot_wireframe(X, Y, entropy)"
+      "ax.plot_wireframe(X, Y, entropy);"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": null
     },
     {
      "cell_type": "markdown",
@@ -116,30 +108,11 @@
      ]
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "j = belief.JointBel(\"j1\")\n",
-      "#print(j.H())\n",
-      "#print(j.probs())\n",
-      "# The expected change of entropy is 0 because we're really\n",
-      "# certain that the joint is \"nil\"\n",
-      "#print(j.H_diff())\n",
-      "\n",
-      "j.observe(\"pris\")\n",
-      "#print(j.probs())\n",
-      "#print(j.H_diff())\n",
-      "\n",
-      "j.observe(\"pris\")\n",
-      "#print(j.probs())\n",
-      "#print(j.H_diff())\n",
-      "\n",
-      "\n",
-      "j.H_tmp()"
-     ],
-     "language": "python",
+     "cell_type": "markdown",
      "metadata": {},
-     "outputs": []
+     "source": [
+      "Visualize the sum of two gaussians. The narrow gaussian is the nil gaussian."
+     ]
     },
     {
      "cell_type": "code",
@@ -173,7 +146,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": null
     },
     {
      "cell_type": "markdown",
@@ -190,75 +164,45 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "import math\n",
-      "prior_std = .8\n",
-      "update_std = .7\n",
-      "\n",
-      "dom = np.linspace(-5, 5, 500)\n",
-      "\n",
-      "y1 = ss.norm.pdf(dom, loc=0, scale=prior_std)\n",
-      "y2 = ss.norm.pdf(dom, loc=0, scale=update_std)\n",
-      "\n",
-      "prior_sigma, update_sigma = prior_std**2, update_std**2\n",
-      "post_sigma = math.sqrt(prior_sigma * update_sigma /\n",
-      "                     (prior_sigma + update_sigma))\n",
-      "#post_std = post_sigma ** 2\n",
-      "#post_std = math.sqrt(post_sigma)\n",
-      "\n",
-      "print(post_sigma)\n",
-      "print(post_std)\n",
-      "y3 = ss.norm.pdf(dom, loc=0, scale=post_sigma)\n",
-      "\n",
-      "fig, ax = plt.subplots(figsize=(8, 6))\n",
-      "ax.plot(dom, y1, label=\"prior\")\n",
-      "ax.plot(dom, y2, label=\"update\")\n",
-      "ax.plot(dom, y3, label=\"post\")\n",
-      "\n",
-      "ax.legend();"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
+      "from pprint import pprint\n",
       "j = belief.JointBel(\"j1\")\n",
-      "print(j.probs())\n",
-      "print(j.H_tmp())\n",
-      "print(j.H_diff())"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "j.observe(\"pris\")\n",
-      "print(j.probs())\n",
-      "print(j.H_tmp())\n",
       "\n",
-      "print(\"_\"*86)\n",
-      "j.observe(\"pris\")\n",
-      "print(j.probs())\n",
-      "print(j.H_tmp())"
+      "print(\"probs {} {} --> H={}\".format(j.name, j.probs(), j.entropy()))\n",
+      "h_change, h_stats = j.entropy_tmp()\n",
+      "pprint(h_stats)\n",
+      "pprint(h_change)"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": null
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "j.H_diff()"
+      "j.observe(\"rot\")\n",
+      "\n",
+      "print(\"probs {} {} --> H={:.3f} H_exp_diff={:.3f}\".format(\n",
+      "      j.name, j.probs(), j.entropy(), j.entropy_diff())\n",
+      ")\n",
+      "h_change, h_stats = j.entropy_tmp()\n",
+      "pprint(h_stats)\n",
+      "pprint(h_change)"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": null
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": null
     }
    ],
    "metadata": {}
