Explain the experiments.

--- a/share/projects/exploration_comparison/belief_experiments.ipynb
+++ b/share/projects/exploration_comparison/belief_experiments.ipynb
@@ -66,6 +66,13 @@
      "prompt_number": null
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Plot the change of entropy:"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
@@ -78,17 +85,8 @@
       "    b[\"movable\"] = i\n",
       "    for j in range(1, 10):\n",
       "        b.observe(\"static\")\n",
-      "        entropy[i, j] = b.entropy_diff()"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": null
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
+      "        entropy[i, j] = b.entropy_diff()\n",
+      "\n",
       "x = np.linspace(1, 10, 10)\n",
       "X, Y = np.meshgrid(x, x)\n",
       "fig = plt.figure(figsize=(12, 9))\n",
@@ -104,13 +102,9 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "# Hierarchical"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
+      "# Multiply Gaussians\n",
+      "This is used in the simplified forward model.\n",
+      "\n",
       "Visualize the sum of two gaussians. The narrow gaussian is the nil gaussian."
      ]
     },
@@ -153,11 +147,18 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "# Calc entropy in the hierarchical scenario\n",
       "How do we want to calculate the change of entropy for the joint bel?\n",
       "\n",
       "- icrement the counter for each label in JointBel\n",
       "- update the appropiate Gaussian with a simple forward model\n",
-      "  - new gauss = old gauss * fake msmt (+ noise)"
+      "  - new gauss = old gauss * fake msmt (+ noise)\n",
+      "  \n",
+      "Important modules/classes are:\n",
+      "\n",
+      "- belief.py\n",
+      "- ObjectBel\n",
+      "- JointBel"
      ]
     },
     {
@@ -196,9 +197,24 @@
      "prompt_number": null
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Here we show the full belief, i.e., an object bel with joint information and the 7 gaussians for the continuous properties."
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "o = belief.ObjectBel(\"o1\")\n",
+      "h_change, h_stats = j.entropy_tmp()\n",
+      "\n",
+      "pprint(\"{} {}\".format(o.name, str(o)))\n",
+      "pprint(\"  joint {}\".format(str(o.joint_bel)))\n",
+      "pprint(h_stats, indent=4)\n",
+      "pprint(\"  H change {}\".format(h_change))"
+     ],
      "language": "python",
      "metadata": {},
      "outputs": [],
