--- a/share/projects/exploration_comparison/belief_experiments.ipynb
+++ b/share/projects/exploration_comparison/belief_experiments.ipynb
@@ -45,7 +45,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "import belief\n",
+      "import belief_rep\n",
       "import probdist"
      ],
      "language": "python",
