--- a/share/projects/exploration_comparison/belief_experiments.ipynb
+++ b/share/projects/exploration_comparison/belief_experiments.ipynb
@@ -219,6 +219,14 @@
      "metadata": {},
      "outputs": [],
      "prompt_number": null
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
