--- a/share/projects/exploration_comparison/compare_exploration_complex.ipynb
+++ b/share/projects/exploration_comparison/compare_exploration_complex.ipynb
@@ -25,6 +25,8 @@
       "from mpl_toolkits.mplot3d import Axes3D\n",
       "import seaborn as sns\n",
       "\n",
+      "from pprint import pprint\n",
+      "\n",
       "%matplotlib inline\n",
       "# automatically reload modules on change\n",
       "%load_ext autoreload\n",
@@ -74,7 +76,9 @@
       "def select_random(belief):\n",
       "    return random.randint(0, len(belief) - 1)\n",
       "\n",
-      "bel_history = ex.run_experiment(world, belief, select_random, 5)"
+      "world, belief = ex.init()\n",
+      "bel_history = ex.run_experiment(world, belief, select_random, 5)\n",
+      "#pprint(bel_history)"
      ],
      "language": "python",
      "metadata": {},
