still not working.

--- a/share/projects/exploration_comparison/compare_exploration_complex.ipynb
+++ b/share/projects/exploration_comparison/compare_exploration_complex.ipynb
@@ -24,6 +24,8 @@
       "import matplotlib.pyplot as plt\n",
       "from mpl_toolkits.mplot3d import Axes3D\n",
       "import seaborn as sns\n",
+      "#sns.set(style=\"whitegrid\")\n",
+      "sns.palplot(sns.color_palette(\"coolwarm\", 16))\n",
       "\n",
       "from pprint import pprint\n",
       "\n",
@@ -34,8 +36,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": null
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -53,8 +54,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": null
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -66,29 +66,64 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": null
+     "outputs": []
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "def select_random(belief):\n",
-      "    return random.randint(0, len(belief) - 1)\n",
-      "\n",
-      "world, belief = ex.init()\n",
-      "bel_history = ex.run_experiment(world, belief, select_random, 5)\n",
-      "#pprint(bel_history)"
+      "    return random.randint(0, len(belief) - 1)"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": null
+     "outputs": []
     },
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "world, belief = ex.init()\n",
+      "bel_history = ex.run_experiment(world, belief, select_random, 5);"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "world, belief = ex.init()\n",
+      "step = 0"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "step += 1\n",
+      "idx = select_random(belief)\n",
+      "print(\"selecting object {} in step {}.\".format(idx, step))\n",
+      "observations = world[idx].interact()\n",
+      "belief[idx].update(observations)\n",
+      "\n",
+      "ex.plot_belief(belief) "
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "for i in range(30):\n",
+      "    print(i)"
+     ],
      "language": "python",
      "metadata": {},
      "outputs": []
