update the complex exploration

--- a/share/projects/exploration_comparison/compare_exploration_complex.ipynb
+++ b/share/projects/exploration_comparison/compare_exploration_complex.ipynb
@@ -15,7 +15,10 @@
       "from __future__ import print_function\n",
       "import random\n",
       "import copy\n",
+      "import math\n",
       "import pprint as pp\n",
+      "from time import gmtime, strftime\n",
+      "import datetime\n",
       "\n",
       "import numpy as np\n",
       "arr = np.array\n",
@@ -36,7 +39,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": null
     },
     {
      "cell_type": "markdown",
@@ -54,7 +58,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": null
     },
     {
      "cell_type": "code",
@@ -66,7 +71,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": null
     },
     {
      "cell_type": "code",
@@ -77,18 +83,20 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": null
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "world, belief = ex.init()\n",
-      "bel_history = ex.run_experiment(world, belief, select_random, 5);"
+      "bel_history = ex.run_experiment(world, belief, select_random, 100, make_pics=True);"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": null
     },
     {
      "cell_type": "code",
@@ -99,7 +107,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": null
     },
     {
      "cell_type": "code",
@@ -111,22 +120,47 @@
       "observations = world[idx].interact()\n",
       "belief[idx].update(observations)\n",
       "\n",
-      "ex.plot_belief(belief) "
+      "#fig = ex.plot_belief(belief)\n",
+      "\n",
+      "#filename = datetime.datetime.now().strftime(\"%Y-%m-%d_%H:%M:%S:%f.png\")\n",
+      "#fig.savefig(filename)"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": null
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "for i in range(30):\n",
-      "    print(i)"
+      "P = [1/3, 1/3, 1/3]\n",
+      "#P = [1/2, 1/2]\n",
+      "#P = [1, 0]\n",
+      "-sum(p * math.log(p) for p in P if p > 0)"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": null
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import probdist\n",
+      "\n",
+      "d = probdist.CategoricalDist({\"nil\": 1, \"pris\": 1, \"rot\": 2})\n",
+      "print(d.prob(\"nil\"))\n",
+      "\n",
+      "print(d.prob_cond(\"nil\", (\"nil\", .5)))\n",
+      "print(d.prob_cond(\"pris\", (\"nil\", .5)))\n",
+      "print(d.prob_cond(\"rot\", (\"nil\", .5)))\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": null
     }
    ],
    "metadata": {}
