--- a/share/projects/exploration_comparison/compare_exploration_complex.ipynb
+++ b/share/projects/exploration_comparison/compare_exploration_complex.ipynb
@@ -13,29 +13,37 @@
      "input": [
       "from __future__ import division\n",
       "from __future__ import print_function\n",
-      "import random\n",
+      "\n",
       "import copy\n",
+      "import datetime\n",
+      "import random\n",
       "import math\n",
       "import pprint as pp\n",
-      "from time import gmtime, strftime\n",
-      "import datetime\n",
       "\n",
       "import numpy as np\n",
       "arr = np.array\n",
       "import scipy.stats as ss\n",
       "\n",
+      "import matplotlib as mpl\n",
       "import matplotlib.pyplot as plt\n",
       "from mpl_toolkits.mplot3d import Axes3D\n",
       "import seaborn as sns\n",
-      "#sns.set(style=\"whitegrid\")\n",
-      "sns.palplot(sns.color_palette(\"coolwarm\", 16))\n",
       "\n",
-      "from pprint import pprint\n",
-      "\n",
+      "# iPython magic\n",
       "%matplotlib inline\n",
-      "# automatically reload modules on change\n",
       "%load_ext autoreload\n",
       "%autoreload 2"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": null
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "sns.palplot(sns.color_palette(\"coolwarm\", 16))"
      ],
      "language": "python",
      "metadata": {},
@@ -54,7 +62,9 @@
      "collapsed": false,
      "input": [
       "import exploration_complex as ex\n",
-      "import belief_rep"
+      "import belief_rep\n",
+      "from strategies_complex import StrategyRandom\n",
+      "from strategies_complex import StrategyRoundRobin"
      ],
      "language": "python",
      "metadata": {},
@@ -75,11 +85,22 @@
      "prompt_number": null
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "# Test all strategies\n",
+      "Quick test if all strategies run."
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "def select_random(belief):\n",
-      "    return random.randint(0, len(belief) - 1)"
+      "strategies = [StrategyRandom(), StrategyRoundRobin()]\n",
+      "for strategy in strategies:\n",
+      "    print(\"=====================================\\n{}\".format(strategy.name))\n",
+      "    world, belief = ex.init()\n",
+      "    bel_history = ex.run_experiment(world, belief, StrategyRoundRobin(), 10, make_pics=False);"
      ],
      "language": "python",
      "metadata": {},
@@ -91,18 +112,7 @@
      "collapsed": false,
      "input": [
       "world, belief = ex.init()\n",
-      "bel_history = ex.run_experiment(world, belief, select_random, 100, make_pics=True);"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": null
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "world, belief = ex.init()\n",
+      "select = StrategyRoundRobin()\n",
       "step = 0"
      ],
      "language": "python",
@@ -115,7 +125,7 @@
      "collapsed": false,
      "input": [
       "step += 1\n",
-      "idx = select_random(belief)\n",
+      "idx = select(belief)\n",
       "print(\"selecting object {} in step {}.\".format(idx, step))\n",
       "observations = world[idx].interact()\n",
       "belief[idx].update(observations)\n",
@@ -124,38 +134,6 @@
       "\n",
       "#filename = datetime.datetime.now().strftime(\"%Y-%m-%d_%H:%M:%S:%f.png\")\n",
       "#fig.savefig(filename)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": null
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "P = [1/3, 1/3, 1/3]\n",
-      "#P = [1/2, 1/2]\n",
-      "#P = [1, 0]\n",
-      "-sum(p * math.log(p) for p in P if p > 0)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": null
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "import probdist\n",
-      "\n",
-      "d = probdist.CategoricalDist({\"nil\": 1, \"pris\": 1, \"rot\": 2})\n",
-      "print(d.prob(\"nil\"))\n",
-      "\n",
-      "print(d.prob_cond(\"nil\", (\"nil\", .5)))\n",
-      "print(d.prob_cond(\"pris\", (\"nil\", .5)))\n",
-      "print(d.prob_cond(\"rot\", (\"nil\", .5)))\n"
      ],
      "language": "python",
      "metadata": {},
