We can run all strategies.

--- a/share/projects/exploration_comparison/compare_exploration_complex.ipynb
+++ b/share/projects/exploration_comparison/compare_exploration_complex.ipynb
@@ -64,7 +64,11 @@
       "import exploration_complex as ex\n",
       "import belief_rep\n",
       "from strategies_complex import StrategyRandom\n",
-      "from strategies_complex import StrategyRoundRobin"
+      "from strategies_complex import StrategyRoundRobin\n",
+      "from strategies_complex import StrategyMaxEntropyObjType\n",
+      "from strategies_complex import StrategyMaxEntropyJointType\n",
+      "from strategies_complex import StrategyExpectedChangeOfEntropy\n",
+      "from strategies_complex import StrategyExpectedChangeOfEntropyVote"
      ],
      "language": "python",
      "metadata": {},
@@ -75,9 +79,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "world, belief = ex.init()\n",
-      "print(world)\n",
-      "print(belief)"
+      "world, belief = ex.init()"
      ],
      "language": "python",
      "metadata": {},
@@ -96,7 +98,15 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "strategies = [StrategyRandom(), StrategyRoundRobin()]\n",
+      "strategies = [\n",
+      "    StrategyRandom(),\n",
+      "    StrategyRoundRobin(),\n",
+      "    StrategyMaxEntropyObjType(),\n",
+      "    StrategyMaxEntropyJointType(),\n",
+      "    StrategyExpectedChangeOfEntropy(),\n",
+      "    StrategyExpectedChangeOfEntropyVote(),\n",
+      "]\n",
+      "runs = 1\n",
       "for strategy in strategies:\n",
       "    print(\"=====================================\\n{}\".format(strategy.name))\n",
       "    world, belief = ex.init()\n",
@@ -112,7 +122,7 @@
      "collapsed": false,
      "input": [
       "world, belief = ex.init()\n",
-      "select = StrategyRoundRobin()\n",
+      "select = StrategyExpectedChangeOfEntropyVote()\n",
       "step = 0"
      ],
      "language": "python",
@@ -130,10 +140,21 @@
       "observations = world[idx].interact()\n",
       "belief[idx].update(observations)\n",
       "\n",
-      "#fig = ex.plot_belief(belief)\n",
+      "fig = ex.plot_belief(belief)\n",
       "\n",
       "#filename = datetime.datetime.now().strftime(\"%Y-%m-%d_%H:%M:%S:%f.png\")\n",
       "#fig.savefig(filename)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": null
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "range(30)"
      ],
      "language": "python",
      "metadata": {},
