And use observation model in the ipynb.

--- a/share/projects/exploration_comparison/compare_exploration_complex.ipynb
+++ b/share/projects/exploration_comparison/compare_exploration_complex.ipynb
@@ -121,6 +121,23 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "def observation_model(observations, p=.01):\n",
+      "    print(\"real properties:\", observations)\n",
+      "    if random.random() < p:\n",
+      "        observations = random.choice([(\"static\", \"nil\"), (\"movable\", \"pris\"), (\"movable\", \"rot\")])\n",
+      "    print(\"noisy observations\", observations)\n",
+      "\n",
+      "    return observations"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": null
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       "world, belief = ex.init()\n",
       "select = StrategyExpectedChangeOfEntropyVote()\n",
       "step = 0"
@@ -137,11 +154,12 @@
       "step += 1\n",
       "idx = select(belief)\n",
       "print(\"selecting object {} in step {}.\".format(idx, step))\n",
+      "\n",
       "observations = world[idx].interact()\n",
+      "observations = observation_model(observations, p=.5)\n",
       "belief[idx].update(observations)\n",
       "\n",
       "fig = ex.plot_belief(belief)\n",
-      "\n",
       "#filename = datetime.datetime.now().strftime(\"%Y-%m-%d_%H:%M:%S:%f.png\")\n",
       "#fig.savefig(filename)"
      ],
