Test the revised strategy.

--- a/share/projects/exploration_comparison/compare_exploration_complex.ipynb
+++ b/share/projects/exploration_comparison/compare_exploration_complex.ipynb
@@ -73,7 +73,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 28
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -85,6 +85,54 @@
      "metadata": {},
      "outputs": [],
      "prompt_number": 4
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "# One wall, one door\n",
+      "\n",
+      "Exp. change of entropy should explore the door more often."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "world, belief = ex.init_wall_and_door()\n",
+      "select_strategy = StrategyExpectedChangeOfEntropy()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 5
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "world, belief = ex.init_wall_and_door()\n",
+      "select_strategy = StrategyRoundRobin()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 6
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "idx = select_strategy(belief)\n",
+      "print(\"selecting object {}\".format(idx))\n",
+      "observations = world[idx].interact()\n",
+      "belief[idx].update(observations)\n",
+      "fig = ex.plot_belief(belief)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": "*"
     },
     {
      "cell_type": "markdown",
@@ -1172,37 +1220,6 @@
      "metadata": {},
      "outputs": [],
      "prompt_number": 81
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "analyse_summary(summary, data, experiments, \"\")"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "ename": "KeyError",
-       "evalue": "'Random'",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-74-1a89b2b290f1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0manalyse_summary\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msummary\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mexperiments\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-        "\u001b[1;32m<ipython-input-72-a54aa1f122f5>\u001b[0m in \u001b[0;36manalyse_summary\u001b[1;34m(summary, data, experiments, title_suffix)\u001b[0m\n\u001b[0;32m     15\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mj\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mattr_name\u001b[0m \u001b[1;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mattr_names\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mstrat_idx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstrategy\u001b[0m \u001b[1;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mexperiments\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 17\u001b[1;33m             \u001b[0mvalues\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mstrategy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mattr_name\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     18\u001b[0m             \u001b[0msns\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtsplot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0max\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0max\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcondition\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mstrategy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcolor\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcolors\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mstrat_idx\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     19\u001b[0m         \u001b[0max\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlegend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-        "\u001b[1;31mKeyError\u001b[0m: 'Random'"
-       ]
-      },
-      {
-       "metadata": {},
-       "output_type": "display_data",
-       "png": "iVBORw0KGgoAAAANSUhEUgAAAQoAAADLCAYAAACWCN1sAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAD1pJREFUeJzt3V1ok+f/x/FPbCIUGfWhUjQJVNuMVmpboVKLKLox2nVb\nBtOD7mA4LV0Ri3PsYGMe7OFA7HYk9sAKPuCmpWMTKqxmoD87mdpWfCrYInGzW9oxsZv+KvPP0mTX\n/2CY3zptrqyaxHu8X0e9yTf3/aFwf7jukHC5jDFGAJDEjGwHAPDkoygAWFEUAKwoCgBWFAUAK4oC\ngJW1KDZt2qSCggItXbp0ypmtW7cqEAiooqJCly5deqwBAWSftSg2btyoUCg05evd3d26fv26wuGw\n9u7dq82bNz/WgACyz1oUq1at0pw5c6Z8/dixY9qwYYMkqbq6Wnfu3NHNmzcfX0IAWffIn1GMjo7K\n7/cnjn0+n0ZGRh71tACeIO7HcZK/fwvc5XIlnf/jD6NYLP44Lp0RbneOJDkms9PySmTOBLc7RzNm\nJL83p3zvo17c6/UqEokkjkdGRuT1epO+JxaL67///b9HvXTG5OXlSpJjMjstr0TmTMjLy9XMmdO7\n5R/50SMYDOrQoUOSpN7eXs2ePVsFBQWPeloATxBrvbz66qv65ptvNDY2Jr/frw8//FATExOSpObm\nZtXX16u7u1vFxcWaNWuWDhw4kPbQADLLlY2fmUejMccs1yRnLjEl5+SVyJwJWX30APDvR1EAsKIo\nAFhRFACsKAoAVhQFACuKAoAVRQHAiqIAYEVRALCiKABYURQArCgKAFYUBQArigKAFUUBwIqiAGBF\nUQCwoigAWFEUAKwoCgBWFAUAK4oCgBVFAcCKogBgZS2KUCikkpISBQIBtba2PvD62NiY6urqVFlZ\nqbKyMh08eDAdOQFkUdKiiMfjamlpUSgU0uDgoDo6OjQ0NDRppq2tTcuWLdPly5fV09Ojt99+W7FY\nLK2hAWRW0qLo7+9XcXGxCgsL5fF41NDQoK6urkkzCxYs0Pj4uCRpfHxc8+bNk9s9vf0NATyZkt7R\no6Oj8vv9iWOfz6e+vr5JM01NTXrmmWe0cOFC3b17V59//rn9ou6cxAavTuB250iSYzI7La9E5ky4\nn3c6kq4oXC6X9QQ7duxQZWWlfvrpJ12+fFlbtmzR3bt3px0IwJMn6YrC6/UqEokkjiORiHw+36SZ\ns2fPavv27ZKkoqIiLVq0SNeuXVNVVdWU543F4o7ZKl5y5vb2knPySmTOhLy8XM2cOb2PBZKuKKqq\nqhQOhzU8PKxoNKrOzk4Fg8FJMyUlJTpx4oQk6ebNm7p27ZoWL148rTAAnkxJ68XtdqutrU21tbWK\nx+NqbGxUaWmp2tvbJUnNzc167733tHHjRlVUVOiPP/7Qxx9/rLlz52YkPIDMcBljTKYvGo3GHLNc\nk5y5xJSck1cicyak7dEDACSKAkAKKAoAVhQFACuKAoAVRQHAiqIAYEVRALCiKABYURQArCgKAFYU\nBQArigKAFUUBwIqiAGBFUQCwoigAWFEUAKwoCgBWFAUAK4oCgBVFAcCKogBgRVEAsLIWRSgUUklJ\niQKBgFpbWx8609PTo2XLlqmsrExr1qx53BkBZFnSbYPi8bhaWlp04sQJeb1eLV++XMFgUKWlpYmZ\nO3fuaMuWLfr666/l8/k0NjaW9tAAMivpiqK/v1/FxcUqLCyUx+NRQ0ODurq6Js0cOXJE69atS+xy\nnp+fn760ALIi6YpidHRUfr8/cezz+dTX1zdpJhwOa2JiQmvXrtXdu3f15ptv6rXXXkt+UXdOYt9G\nJ3C7cyTJMZmdllcicybczzut9yZ70eVyWU8wMTGhixcv6uTJk7p3755qamq0YsUKBQKBaYcC8GRJ\nWhRer1eRSCRxHIlEEo8Y9/n9fuXn5ys3N1e5ublavXq1rly5krQoYrG4Y3aAlpy5a7XknLwSmTMh\nbbuZV1VVKRwOa3h4WNFoVJ2dnQoGg5NmXn75ZX377beKx+O6d++e+vr6tGTJkmmFAfBkSlovbrdb\nbW1tqq2tVTweV2Njo0pLS9Xe3i5Jam5uVklJierq6lReXq4ZM2aoqamJogD+ZVzGGJPpi0ajMccs\n1yRnLjEl5+SVyJwJaXv0AACJogCQAooCgBVFAcCKogBgRVEAsKIoAFhRFACsKAoAVhQFACuKAoAV\nRQHAiqIAYEVRALCiKABYURQArCgKAFYUBQArigKAFUUBwIqiAGBFUQCwoigAWFEUAKwoCgBW1qII\nhUIqKSlRIBBQa2vrlHPnz5+X2+3W0aNHH2tAANmXtCji8bhaWloUCoU0ODiojo4ODQ0NPXTunXfe\nUV1dnbKwQyGANEtaFP39/SouLlZhYaE8Ho8aGhrU1dX1wNzu3bu1fv16zZ8/P21BAWRP0h1LR0dH\n5ff7E8c+n099fX0PzHR1dek///mPzp8/L5fLZb+oOyexwasTuN05kuSYzE7LK5E5E+7nnY6kK4pU\nbvpt27Zp586dcrlcMsbw6AH8CyVdUXi9XkUikcRxJBKRz+ebNHPhwgU1NDRIksbGxnT8+HF5PB4F\ng8EpzxuLxR2zVbzkzO3tJefklcicCXl5uZo5M+ktP6Wk76qqqlI4HNbw8LAWLlyozs5OdXR0TJr5\n/vvvE39v3LhRL730UtKSAOA8SYvC7Xarra1NtbW1isfjamxsVGlpqdrb2yVJzc3NGQkJILtcJgsf\nKkSjMccs1yRnLjEl5+SVyJwJj/LowTczAVhRFACsKAoAVhQFACuKAoAVRQHAiqIAYEVRALCiKABY\nURQArCgKAFYUBQArigKAFUUBwIqiAGBFUQCwoigAWFEUAKwoCgBWFAUAK4oCgBVFAcCKogBgRVEA\nsEqpKEKhkEpKShQIBNTa2vrA64cPH1ZFRYXKy8u1cuVKDQwMPPagALLHum1QPB5XS0uLTpw4Ia/X\nq+XLlysYDKq0tDQxs3jxYp0+fVp5eXkKhUJ644031Nvbm9bgADLHuqLo7+9XcXGxCgsL5fF41NDQ\noK6urkkzNTU1ysvLkyRVV1drZGQkPWkBZIV1RTE6Oiq/35849vl86uvrm3J+3759qq+vT35Rd05i\n30YncLtzJMkxmZ2WVyJzJtzPO6332gZcLlfKJzt16pT279+vM2fOTDsQgCePtSi8Xq8ikUjiOBKJ\nyOfzPTA3MDCgpqYmhUIhzZkzJ+k5Y7G4Y3aAlpy5a7XknLwSmTMhrbuZV1VVKRwOa3h4WNFoVJ2d\nnQoGg5NmfvzxR73yyiv67LPPVFxcPK0gAJ5c1npxu91qa2tTbW2t4vG4GhsbVVpaqvb2dklSc3Oz\nPvroI92+fVubN2+WJHk8HvX396c3OYCMcRljTKYvGo3GHLNck5y5xJSck1cicyak9dEDACgKAFYU\nBQArigKAFUUBwIqiAGBFUQCwoigAWFEUAKwoCgBWFAUAK4oCgBVFAcCKogBgRVEAsKIoAFhRFACs\nKAoAVhQFACuKAoAVRQHAiqIAYEVRALCiKABYURQArKxFEQqFVFJSokAgoNbW1ofObN26VYFAQBUV\nFbp06dJjDwkgu5IWRTweV0tLi0KhkAYHB9XR0aGhoaFJM93d3bp+/brC4bD27t2b2H8UwL9H0qLo\n7+9XcXGxCgsL5fF41NDQoK6urkkzx44d04YNGyRJ1dXVunPnjm7evJm+xAAyLumOpaOjo/L7/Ylj\nn8+nvr4+68zIyIgKCgqmvqg7J7HBqxO43TmS5JjMTssrkTkT7ued1nuTvehyuVI6yd83RLe9b8YM\n17R3Vc4mp2V2Wl6JzE+qpI8eXq9XkUgkcRyJROTz+ZLOjIyMyOv1PuaYALIpaVFUVVUpHA5reHhY\n0WhUnZ2dCgaDk2aCwaAOHTokSert7dXs2bOTPnYAcJ6kaya32622tjbV1tYqHo+rsbFRpaWlam9v\nlyQ1Nzervr5e3d3dKi4u1qxZs3TgwIGMBAeQOS7z9w8YAOBv+GYmACuKAoAVRQHAKq1F4bTfidjy\nHj58WBUVFSovL9fKlSs1MDCQhZSTpfI/lqTz58/L7Xbr6NGjGUz3oFTy9vT0aNmyZSorK9OaNWsy\nG/AhbJnHxsZUV1enyspKlZWV6eDBg5kP+RebNm1SQUGBli5dOuXMP77vTJrEYjFTVFRkbty4YaLR\nqKmoqDCDg4OTZr766ivz/PPPG2OM6e3tNdXV1emKY5VK3rNnz5o7d+4YY4w5fvx4VvMak1rm+3Nr\n1641L7zwgvniiy+ykPR/OWx5b9++bZYsWWIikYgxxphbt25lI2pCKpnff/998+677xpj/sw7d+5c\nMzExkY24xhhjTp8+bS5evGjKysoe+vp07ru0rSic9juRVPLW1NQoLy9P0p95R0ZGshE1IZXMkrR7\n926tX79e8+fPz0LK/0kl75EjR7Ru3brEF/vy8/OzETUhlcwLFizQ+Pi4JGl8fFzz5s2T2529b2uu\nWrVKc+bMmfL16dx3aSuKh/0GZHR01DqTrZsvlbx/tW/fPtXX12ci2pRS/R93dXUlftWb6tfy0yGV\nvOFwWL/++qvWrl2rqqoqffrpp5mOOUkqmZuamnT16lUtXLhQFRUV2rVrV6Zj/iPTue/SVnvp+p1I\nuvyT6546dUr79+/XmTNn0pjILpXM27Zt086dO+VyuWSMeeD/nUmp5J2YmNDFixd18uRJ3bt3TzU1\nNVqxYoUCgUAGEj4olcw7duxQZWWlenp69N133+m5557TlStX9NRTT2Ug4fT80/subUXhtN+JpJJX\nkgYGBtTU1KRQKJR0eZcJqWS+cOGCGhoaJP35odvx48fl8Xge+Cp+JqSS1+/3Kz8/X7m5ucrNzdXq\n1at15cqVrBVFKpnPnj2r7du3S5KKioq0aNEiXbt2TVVVVRnNmqpp3XeP7ROUv5mYmDCLFy82N27c\nML///rv1w8xz585l9cPBVPL+8MMPpqioyJw7dy5LKSdLJfNfvf766+bLL7/MYMLJUsk7NDRknn32\nWROLxcxvv/1mysrKzNWrV7OUOLXMb731lvnggw+MMcb8/PPPxuv1ml9++SUbcRNu3LiR0oeZqd53\naSsKY4zp7u42Tz/9tCkqKjI7duwwxhizZ88es2fPnsTMli1bTFFRkSkvLzcXLlxIZxwrW97GxkYz\nd+5cU1lZaSorK83y5cuzGdcYk9r/+L5sF4UxqeX95JNPzJIlS0xZWZnZtWtXtqIm2DLfunXLvPji\ni6a8vNyUlZWZw4cPZzOuaWhoMAsWLDAej8f4fD6zb9++R77v+K0HACu+mQnAiqIAYEVRALCiKABY\nURQArCgKAFYUBQCr/wdPnwqD2WWfpwAAAABJRU5ErkJggg==\n",
-       "text": [
-        "<matplotlib.figure.Figure at 0x6a3d550>"
-       ]
-      }
-     ],
-     "prompt_number": 74
     }
    ],
    "metadata": {}
