Use fixed strategies.

--- a/share/projects/exploration_comparison/compare_exploration_complex.ipynb
+++ b/share/projects/exploration_comparison/compare_exploration_complex.ipynb
@@ -65,10 +65,10 @@
       "import belief_rep\n",
       "from strategies_complex import StrategyRandom\n",
       "from strategies_complex import StrategyRoundRobin\n",
-      "from strategies_complex import StrategyMaxEntropyObjType\n",
-      "from strategies_complex import StrategyMaxEntropyJointType\n",
+      "#from strategies_complex import StrategyMaxEntropyObjType\n",
+      "#from strategies_complex import StrategyMaxEntropyJointType\n",
       "from strategies_complex import StrategyExpectedChangeOfEntropy\n",
-      "from strategies_complex import StrategyExpectedChangeOfEntropyVote"
+      "#from strategies_complex import StrategyExpectedChangeOfEntropyVote"
      ],
      "language": "python",
      "metadata": {},
@@ -100,7 +100,7 @@
      "collapsed": false,
      "input": [
       "world, belief = ex.init_wall_and_door()\n",
-      "select_strategy = StrategyExpectedChangeOfEntropy()"
+      "select_strategy = StrategyRandom()"
      ],
      "language": "python",
      "metadata": {},
@@ -113,6 +113,33 @@
      "input": [
       "world, belief = ex.init_wall_and_door()\n",
       "select_strategy = StrategyRoundRobin()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": null
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "world, belief = ex.init_wall_and_door()\n",
+      "select_strategy = StrategyExpectedChangeOfEntropy()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": null
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "idx = select_strategy(belief)\n",
+      "print(\"selecting object {}\".format(idx))\n",
+      "observations = world[idx].interact()\n",
+      "belief[idx].update(observations)\n",
+      "fig = ex.plot_belief(belief)"
      ],
      "language": "python",
      "metadata": {},
